grpc-k8s-example/k8s/client-depl-amd64.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-example-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc-example-client
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: grpc-example-client
    spec:
      containers:
      - name: grpc-example-client
        image: binjip978/grpc-example-client-amd64:0.0.1
        args: ["-serverAddr=grpc-example-server:9000"]
        resources:
          requests:
            memory: "16Mi"
            cpu: "125m"
          limits:
            memory: "32Mi"
            cpu: "250m"
