grpc-k8s-example/k8s/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grpc-example-client
spec:
  containers:
  - name: grpc-example-client
    image: binjip978/grpc-example-client-arm7:0.0.1
    args: ["-serverAddr=grpc-example-server:9000"]
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "200m"
