grpc-k8s-example/k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-example-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-example-server
  template:
    metadata:
      labels:
        app: grpc-example-server
    spec:
      containers:
      - name: grpc-example-server
        image: binjip978/grpc-example-server-arm7:0.0.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
