grpc-k8s-example/k8s/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grpc-example-server
spec:
  containers:
  - name: grpc-example-server
    image: binjip978/grpc-example-server-arm7:0.0.1
    ports:
      - containerPort: 9000
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "200m"
