grpc-k8s-example/k8s/server-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-example-http-server
spec:
  selector:
    app: grpc-example-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
