grpc-k8s-example/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-example-server
spec:
  selector:
    app: grpc-example-server
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
