grpc-k8s-example/k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "example-ingress"
spec:
  rules:
    - host: pi2a.fleet
      http:
        paths:
          - path: /version
            backend: 
              serviceName: grpc-example-http-server
              servicePort: 8000
